--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id="sidebar" class="fixed inset-y-0 left-0 z-50 w-64 bg-white shadow-lg transform -translate-x-full transition-transform lg:translate-x-0">
             <div class="p-5 text-xl font-bold border-b">Dashboard</div>
             <nav class="p-4">
-                <a href="#" class="block p-3 rounded-lg hover:bg-gray-200">Link 1</a>
-                <a href="#" class="block p-3 rounded-lg hover:bg-gray-200">Link 2</a>
+                <a href="clock1.html" class="block p-3 rounded-lg hover:bg-gray-200">Link 1</a>
+                <a href="clock2.html" class="block p-3 rounded-lg hover:bg-gray-200">Link 2</a>
 <!--                 <a href="#" class="block p-3 rounded-lg hover:bg-gray-200">Link 3</a>
                 <a href="#" class="block p-3 rounded-lg hover:bg-gray-200">Link 4</a>
                 <a href="#" class="block p-3 rounded-lg hover:bg-gray-200">Link 5</a> -->
